[project]
name = "ha-snb"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "storzandbickel-ble>=0.1.5",
]

[project.optional-dependencies]
# Runtime deps are only storzandbickel-ble; tests need HA + bluetooth models for fixtures.
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-homeassistant-custom-component>=0.13.320",
    "home-assistant-bluetooth>=1.13.0",
]
# Static typing (also installed in CI).
dev = [
    "pyright>=1.1.390",
]

[tool.pyright]
include = ["custom_components/storzandbickel"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
